styling fix on mobile budget edit

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -71,6 +71,7 @@ html, body {
 	}
 	.edit {
 		margin-top:10px;
+		padding:5px;
 	}
 	.holder {
 		position:relative;
